--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "365businessdev.alget",
+  "name": "365businessdev-alget",
   "displayName": "ALGet",
   "description": "NuGet package manager for Microsoft Dynamics 365 Business Central AL development.",
   "version": "0.0.1",
