--- a/package.json
+++ b/package.json
@@ -79,24 +79,28 @@
       {
         "title": "ALGet",
         "properties": {
-          "365businessdev.alget.countryCode": {
+            "365businessdev.alget.countryCode": {
             "type": "string",
             "default": "w1",
-            "description": "Country code to be used for localized NuGet packages."
-          },
+            "description": "Country code to be used for localized NuGet packages.",
+            "scope": "resource"
+            },
           "365businessdev.alget.enableMSSymbolsFeed": {
             "type": "boolean",
             "default": true,
-            "description": "Enable the Microsoft symbols feed."
+            "description": "Enable the Microsoft symbols feed.",
+            "scope": "resource"
           },
           "365businessdev.alget.enableAppSourceSymbolsFeed": {
             "type": "boolean",
             "default": true,
-            "description": "Enable the Microsoft AppSource symbols feed."
+            "description": "Enable the Microsoft AppSource symbols feed.",
+            "scope": "resource"
           },
           "365businessdev.alget.nugetFeeds": {
             "type": "array",
             "description": "List of additional NuGet feeds.",
+            "scope": "resource",
             "items": {
               "type": "object",
               "properties": {
